Prevents longer multi-part input elements from wrapping
Also some minor tweaks to horizontal layout items and positioning of pre- and post-labels.

--- a/Survey/styles/a-label.css
+++ b/Survey/styles/a-label.css
@@ -10,10 +10,11 @@
     border: 1px solid #8797c8;
     border-radius: 0 10px 10px 0;
     position: relative;
-    left: -1em;
+    left: -.5em;
     background-color: #FAFAFA;
     padding: 10px 16px;
     color: #A0ABCC;
+    white-space: nowrap;
 }
 
 .a-label-prelabel {
@@ -23,4 +24,5 @@
     background-color: #FAFAFA;
     padding: 10px 16px;
     color: #A0ABCC;
+    white-space: nowrap;
 }
